avoid capitalisation of headers

--- a/attr.html
+++ b/attr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><meta charset=utf-8>
-<title>Copyright and Attributions</title>
+<title>Copyright and attributions</title>
 <link rel=icon type="image/vnd.microsoft.icon" href=favicon.ico>
 <link rel="shortcut icon" type="image/vnd.microsoft.icon" href=favicon.ico>
 <link rel=stylesheet href=se.css>
@@ -7,7 +7,7 @@
 <link rel=next title="Typographical Conventions" href=typo.html>
 <script src=docs.js></script>
 
-<h1>Copyright and Attributions</h1>
+<h1>Copyright and attributions</h1>
 
 <p><strong>The Selenium Documentation</strong>
 
@@ -80,7 +80,7 @@
 </ul>
 </div>
 
-<p>Third-Party Software used by Selenium documentation project:
+<p>Third-Party software used by Selenium documentation project:
 <table>
  <tr><th>Software</th> <th>Version</th> <th>License</tr>
  <tr>
@@ -90,7 +90,7 @@
 </table>
 
 
-<h2>HTML Version and Source Code</h2>
+<h2>HTML version and source code</h2>
 
 <p>An HTML version of this documentation is freely available from
  <a href="//seleniumhq.github.io/docs">https://seleniumhq.github.io/docs</a>.
