--- a/drivers.html
+++ b/drivers.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>Driver Idiosyncrasies</title>
+<title>Driver idiosyncrasies</title>
 <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
@@ -8,7 +8,7 @@
 <link rel=next href=java.html title="The Java Support Package">
 <script src=docs.js></script>
 
-<h1>Driver Idiosyncrasies</h1>
+<h1>Driver idiosyncrasies</h1>
 
 
 <h2>Shared capabilities</h2>
@@ -17,7 +17,9 @@
 <h2>Driver specific capabilities</h2>
 
 <h3>Internet Explorer</h3>
+
 <h4>fileUploadDialogTimeout</h4>
+
 <p>In some environments, Internet Explorer may timeout when opening the
  File Upload dialog. IEDriver has a default timeout of 1000ms, but you
  can increase the timeout using the fileUploadDialogTimeout capability.
