--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><meta charset=utf-8>
-<title>Selenium Documentation</title>
+<title>Selenium documentation</title>
 <link rel=icon type="image/vnd.microsoft.icon" href=favicon.ico>
 <link rel="shortcut icon" type="image/vnd.microsoft.icon" href=favicon.ico>
 <link rel=stylesheet href=se.css>
@@ -54,14 +54,14 @@ search_box.submit()</code></pre>
  on several different operating systems.
 
 
-<h2>Getting Started</h2>
+<h2>Getting started</h2>
 
 <p>If you are new to Selenium,
  we have a few resources that can help you
  get up to speed right away.
 
 <div id=gettingstarted><ul>
- <li><a href=quick.html#quick_tour>Quick Tour</a>
+ <li><a href=quick.html#quick_tour>Quick tour</a>
   <ul>
    <li><a href=quick.html#webdriver>WebDriver</a>
    <li><a href=quick.html#selenium_remote_control>Selenium Remote Control</a>
@@ -72,7 +72,7 @@ search_box.submit()</code></pre>
 </div>
 
 
-<h2>Narrative Documentation</h2>
+<h2>Narrative documentation</h2>
 
 <p>Narrative documentation in chapter form
  explaining how to use Selenium in detail, from bottom up.
@@ -80,95 +80,95 @@ search_box.submit()</code></pre>
 <div id=narrative><ul>
  <li><a href=intro.html#introduction>Introduction</a>
   <ul>
-   <li><a href=intro.html#the_selenium_project_and_tools>The Selenium Project and Tools</a>
-   <li><a href=intro.html#on_test_automation>On Test Automation</a>
-   <li><a href=intro.html#types_of_testing>Types of Testing</a>
-   <li><a href=intro.html#about_this_documentation>About This Documentation</a>
+   <li><a href=intro.html#the_selenium_project_and_tools>The Selenium project and tools</a>
+   <li><a href=intro.html#on_test_automation>On test automation</a>
+   <li><a href=intro.html#types_of_testing>Types of testing</a>
+   <li><a href=intro.html#about_this_documentation>About this documentation</a>
   </ul></li>
- <li><a href=install.html#selenium_installation>Selenium Installation</a>
+ <li><a href=install.html#selenium_installation>Selenium installation</a>
   <ul>
    <li><a href=install.html#using_browser_specific_jar>Using browser specific JAR</a>
    <li><a href=install.html#using_non_browser_specific_jar>Using non browser specific JAR</a>
    <li><a href=install.html#using_standalone_jar>Using standalone JAR</a>
   </ul></li>
- <li><a href=start.html#getting_started_with_webdriver>Getting Started With WebDriver</a>
+ <li><a href=start.html#getting_started_with_webdriver>Getting started with WebDriver</a>
   <ul>
-   <li><a href=start.html#consumer_browsers>Consumer Browsers</a>
-   <li><a href=start.html#specialized_browsers>Specialized Browsers</a>
+   <li><a href=start.html#consumer_browsers>Consumer browsers</a>
+   <li><a href=start.html#specialised_browsers>Specialised browsers</a>
    <li><a href=start.html#other_third_party_drivers_and_plugins>Other third party drivers and plugins</a>
-   <li><a href=start.html#locating_elements>Locating Elements</a>
-   <li><a href=start.html#performing_actions_on_the_aut>Performing Actions on the AUT</a>
+   <li><a href=start.html#locating_elements>Locating elements</a>
+   <li><a href=start.html#performing_actions_on_the_aut>Performing actions on the AUT</a>
   </ul></li>
  <li><a href=wd.html#webdriver>WebDriver</a>
   <ul>
-   <li><a href=wd.html#driver_requirements>Driver Requirements</a>
-   <li><a href=wd.html#browser_launching_and_manipulation>Browser Launching and Manipulation</a>
+   <li><a href=wd.html#driver_requirements>Driver requirements</a>
+   <li><a href=wd.html#browser_launching_and_manipulation>Browser launching and manipulation</a>
    <li><a href=wd.html#waits>Waits</a>
-   <li><a href=wd.html#support_classes>Support Classes</a>
-   <li><a href=wd.html#http_proxies>HTTP Proxies</a>
-   <li><a href=wd.html#page_load_strategy>Page Load Strategy</a>
-   <li><a href=wd.html#webelement>WebElement</a>
+   <li><a href=wd.html#support_classes>Support classes</a>
+   <li><a href=wd.html#http_proxies>HTTP proxies</a>
+   <li><a href=wd.html#page_loading_strategy>Page loading strategy</a>
+   <li><a href=wd.html#web_elements>Web elements</a>
    <li><a href=wd.html#keyboard>Keyboard</a>
    <li><a href=wd.html#mouse>Mouse</a>
   </ul></li>
  <li><a href=remote.html#remote_webdriver>Remote WebDriver</a>
   <ul>
-   <li><a href=remote.html#the_remotewebdriver_server>The RemoteWebDriver Server</a>
-   <li><a href=remote.html#running_remotewebdriver_client>Running RemoteWebDriver Client</a>
+   <li><a href=remote.html#the_remotewebdriver_server>The RemoteWebDriver server</a>
+   <li><a href=remote.html#running_remotewebdriver_client>Running RemoteWebDriver client</a>
   </ul></li>
- <li><a href=best.html#best_practices>Best Practices</a>
+ <li><a href=best.html#best_practices>Best practices</a>
   <ul>
-   <li><a href=best.html#page_object_models>Page Object Models</a>
+   <li><a href=best.html#page_object_models>Page object models</a>
    <li><a href=best.html#domain_specific_language>Domain Specific Language</a>
-   <li><a href=best.html#generating_application_state>Generating Application State</a>
-   <li><a href=best.html#mock_external_services>Mock External Services</a>
-   <li><a href=best.html#improved_reporting>Improved Reporting</a>
-   <li><a href=best.html#avoid_sharing_state>Avoid Sharing State</a>
-   <li><a href=best.html#test_independency>Test Independency</a>
-   <li><a href=best.html#consider_using_a_fluent_api>Consider Using a Fluent API</a>
-   <li><a href=best.html#fresh_browser_per_test>Fresh Browser Per Test</a>
+   <li><a href=best.html#generating_application_state>Generating application state</a>
+   <li><a href=best.html#mock_external_services>Mock external services</a>
+   <li><a href=best.html#improved_reporting>Improved reporting</a>
+   <li><a href=best.html#avoid_sharing_state>Avoid sharing state</a>
+   <li><a href=best.html#test_independency>Test independency</a>
+   <li><a href=best.html#consider_using_a_fluent_api>Consider using a fluent API</a>
+   <li><a href=best.html#fresh_browser_per_test>Fresh browser per test</a>
   </ul></li>
  <li><a href=worst.html#worst_practices>Worst Practices</a>
   <ul>
    <li><a href=worst.html#captchas>Captchas</a>
-   <li><a href=worst.html#file_downloads>File Downloads</a>
-   <li><a href=worst.html#http_response_codes>HTTP Response Codes</a>
-   <li><a href=worst.html#gmail_email_and_facebook_logins>Gmail, Email, and Facebook Logins</a>
-   <li><a href=worst.html#test_dependency>Test Dependency</a>
-   <li><a href=worst.html#performance_testing>Performance Testing</a>
-   <li><a href=worst.html#link_spidering>Link Spidering</a>
+   <li><a href=worst.html#file_downloads>File downloads</a>
+   <li><a href=worst.html#http_response_codes>HTTP response codes</a>
+   <li><a href=worst.html#gmail_email_and_facebook_logins>GMail, email, and Facebook logins</a>
+   <li><a href=worst.html#test_dependency>Test dependency</a>
+   <li><a href=worst.html#performance_testing>Performance testing</a>
+   <li><a href=worst.html#link_spidering>Link spidering</a>
   </ul></li>
  <li><a href=grid.html#selenium_grid>Selenium Grid</a>
   <ul>
-   <li><a href=grid.html#pros_and_cons>Pros and Cons</a>
-   <li><a href=grid.html#what_is_a_hub_and_node>What is a Hub and Node?</a>
-   <li><a href=grid.html#rolling_your_own_grid>Rolling Your Own Grid</a>
+   <li><a href=grid.html#pros_and_cons>Pros and cons</a>
+   <li><a href=grid.html#what_is_a_hub_and_node>What is a hub and node?</a>
+   <li><a href=grid.html#rolling_your_own_grid>Rolling your own grid</a>
   </ul></li>
- <li><a href=drivers.html#driver_idiosyncrasies>Driver Idiosyncrasies</a>
+ <li><a href=drivers.html#driver_idiosyncrasies>Driver idiosyncrasies</a>
   <ul>
    <li><a href=drivers.html#shared_capabilities>Shared capabilities</a>
    <li><a href=drivers.html#driver_specific_capabilities>Driver specific capabilities</a>
   </ul></li>
- <li><a href=java.html#the_java_support_package>The Java Support Package</a>
+ <li><a href=java.html#the_java_support_package>The Java support package</a>
   <ul>
-   <li><a href=java.html#working_with_colours>Working With Colours</a>
-   <li><a href=java.html#working_with>Working With</a>
-   <li><a href=java.html#mouse_and_keyboard_actions_in_detail>Mouse and Keyboard actions in detail</a>
-   <li><a href=java.html#working_with_webelements>Working with WebElements</a>
+   <li><a href=java.html#working_with_colours>Working with colours</a>
+   <li><a href=java.html#working_with>Working with</a>
+   <li><a href=java.html#mouse_and_keyboard_actions_in_detail>Mouse and keyboard actions in detail</a>
+   <li><a href=java.html#working_with_web_elements>Working with web elements</a>
   </ul></li>
 </ul>
 </div>
 
 
-<h2>Front Matter</h2>
+<h2>Front matter</h2>
 
 <div id=frontmatter><ul>
- <li><a href=attr.html#copyright_and_attributions>Copyright and Attributions</a>
+ <li><a href=attr.html#copyright_and_attributions>Copyright and attributions</a>
   <ul>
    <li><a href=attr.html#attributions>Attributions</a>
-   <li><a href=attr.html#html_version_and_source_code>HTML Version and Source Code</a>
+   <li><a href=attr.html#html_version_and_source_code>HTML version and source code</a>
    <li><a href=attr.html#license>License</a>
   </ul></li>
- <li><a href=typo.html#typographical_conventions>Typographical Conventions</a>
+ <li><a href=typo.html#typographical_conventions>Typographical conventions</a>
 </ul>
 </div>
