--- a/install.html
+++ b/install.html
@@ -8,7 +8,7 @@
 <link rel=next href=start.html title="Getting Started">
 <script src=docs.js></script>
 
-<h1>Selenium Installation</h1>
+<h1>Selenium installation</h1>
 
 <p>Selenium set up is quite different than other commercial tools.
  You don’t install a tool using Selenium binaries
