--- a/intro.html
+++ b/intro.html
@@ -11,7 +11,7 @@
 <h1>Introduction</h1>
 
 
-<h2>The Selenium Project and Tools</h2>
+<h2>The Selenium project and tools</h2>
 
 
 <h3>Selenium controls web browsers</h3>
@@ -35,7 +35,7 @@
  which encourages composition with other libraries to suit your purpose.
 
 
-<h3>One Interface to Rule Them All</h3>
+<h3>One interface to rule them all</h3>
 
 <p>One of the project's guiding principles
  is to support a common interface for all (major) browser technologies.
@@ -53,7 +53,7 @@
  Internet Explorer, Chrome, and all other supported browsers.
 
 
-<h3>Tools and Support</h3>
+<h3>Tools and support</h3>
 
 <p>Selenium's minimalist design approach gives it
  versatility to be included as a component in bigger applications.
@@ -78,7 +78,7 @@
  but to make it easy to scale and deploy such grids.
 
 
-<h3>Who Uses Selenium</h3>
+<h3>Who uses Selenium</h3>
 
 <p>Many of the most important companies in the world
  have adopted Selenium for their browser-based testing,
@@ -129,7 +129,7 @@
  into the <em>du jeur</em> remote control library for user agents.
 
 
-<h2>On Test Automation</h2>
+<h2>On test automation</h2>
 
 <p>First, start by asking yourself whether or not you really need to use a browser.
  Odds are good that, at some point, if you're working on a complex web application,
@@ -172,7 +172,7 @@
  they also encompass large business-critical portions at one time.
 
 
-<h3>Testing Requirements</h3>
+<h3>Testing requirements</h3>
 
 <p>As mentioned before, Selenium tests can be expensive to run.
  To what extent depends on the browser you're running the tests against,
@@ -186,7 +186,7 @@
  will quickly become a non-trival undertaking.
 
 
-<h3>Let's start with an example</h3>
+<h3>Let’s start with an example</h3>
 
 <p>Larry has written a web site which allows users to order their own
  custom unicorns.
@@ -344,7 +344,7 @@ Assert.assertTrue("Sparkles should have been created, with all attributes intact
  and add her to the cart.
 
 
-<h2>Types of Testing</h2>
+<h2>Types of testing</h2>
 
 <p>TODO: Add paragraphs about acceptance testing, performance testing,
  load testing, regression testing, test driven development, and/or
@@ -352,7 +352,7 @@ Assert.assertTrue("Sparkles should have been created, with all attributes intact
  with how they relate to Selenium.
 
 
-<h2>About This Documentation</h2>
+<h2>About this documentation</h2>
 
 <p>These docs, like the code itself, are maintained 100% by volunteers
  within the Selenium community.
