--- a/java.html
+++ b/java.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>The Java Support Package</title>
+<title>The Java support package</title>
 <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
@@ -8,10 +8,10 @@
 <link rel=next href=attr.html title="Copyright and Attributions">
 <script src=docs.js></script>
 
-<h1>The Java Support Package</h1>
+<h1>The Java support package</h1>
 
 
-<h2>Working With Colours</h2>
+<h2>Working with colours</h2>
 
 <p>You will occasionally want to validate the colour of a thing as part of your tests,
  the problem is that colour definitions on the web are not constant.
@@ -72,7 +72,7 @@ assert loginButtonBackgroundColour.asRgb().equals("rgb(255, 105, 180)");</code><
 <p>Colours are no longer a problem.
 
 
-<h2 class=working_with_select_elements>Working With <code>select</code> Elements</h2>
+<h2 class=working_with_select_elements>Working with <code>select</code> elements</h2>
 
 <p>Select elements can require quite a bit of boiler plate code to automate.
  To reduce this and make your tests cleaner there is a
@@ -143,6 +143,6 @@ selectObject.deselectAll();</code></pre>
 
 <pre><code class=java>Boolean doesThisAllowMultipleSelections = selectObject.isMultiple();</code></pre>
 
-<h2 class=mouse_and_keyboard_actions_in_detail>Mouse and Keyboard actions in detail</h2>
+<h2 class=mouse_and_keyboard_actions_in_detail>Mouse and keyboard actions in detail</h2>
 
-<h2 class=working_with_webelements>Working with WebElements</h2>
+<h2 class=working_with_webelements>Working with web elements</h2>
