--- a/quick.html
+++ b/quick.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>Quick Tour</title>
+<title>Quick tour</title>
 <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
@@ -8,8 +8,11 @@
 <link rel=next href=intro.html title=Introduction>
 <script src=docs.js></script>
 
-<h1>Quick Tour</h1>
-Selenium is not just one tool or API but it composes many tools -
+<h1>Quick tour</h1>
+
+<p>Selenium is not just one tool or API
+ but it composes many tools.
+
 
 <h2>WebDriver</h2>
 
@@ -21,6 +24,7 @@ run tests. This is as if real user is operating the browser. Since
 WebDriver does not require its API to be compiled with application
 code hence it is not intrusive in nature. Hence you are testing the
 same application which you push live.
+
 
 <h2>Selenium Remote Control</h2>
 
@@ -34,6 +38,7 @@ you tested. Selenium 2 APIs yet contain Selenium RC APIs but
 Selenium 3 would completely get rid of Selenium RC APIs. If you are
 still using Selenium RC then you must
 <em><a href=rctowd.html>migrate</a></em> to Selenium WebDriver.
+
 
 <h2>Selenium IDE</h2>
 
@@ -54,4 +59,3 @@ WebDriver API then you will never use Selenium IDE.
 running your test on multiple combinations of browser/operating
 system. This is where <em><a href=grid.html>Selenium Grid</a></em>
 comes to rescue.
-
