--- a/start.html
+++ b/start.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>Getting Started With WebDriver</title>
+<title>Getting started with WebDriver</title>
 <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
@@ -8,7 +8,7 @@
 <link rel=next href=wd.html title=WebDriver>
 <script src=docs.js></script>
 
-<h1>Getting Started With WebDriver</h1>
+<h1>Getting started with WebDriver</h1>
 
 <p>Selenium supports automation of all the major browsers in the market
  through the use of <em>WebDriver</em>.
@@ -33,7 +33,7 @@
  <a href=drivers.html>Driver Idiosyncracies</a>.
 
 
-<h2>Consumer Browsers</h2>
+<h2>Consumer browsers</h2>
 
 <p>The Selenium framework officially supports the following browsers:
 
@@ -48,7 +48,7 @@
 </table>
 
 
-<h2>Specialized Browsers</h2>
+<h2>Specialised browsers</h2>
 
 <p>There are also a set of specialized browsers out there
  typically used in development environments.
@@ -92,7 +92,7 @@
 </table>
 
 
-<h2>Locating Elements</h2>
+<h2>Locating elements</h2>
 
 
 <h3>Locating One Element</h3>
@@ -146,7 +146,7 @@ one search:
 <pre><code class=java>driver.findElement(By.cssSelector("#cheese #cheddar"));</code></pre>
 
 
-<h3>Locating Multiple Elements</h3>
+<h3>Locating ultiple elements</h3>
 
 <p>It's possible that the document we are working with may turn out to have an
 ordered list of the cheese we like the best:
@@ -169,7 +169,7 @@ empty list will be returned.
 <pre><code class=java>List&lt;WebElement&gt; muchoCheese = driver.findElements(By.cssSelector("#cheese li"));</code></pre>
 
 
-<h3>Element Selection Strategies</h3>
+<h3>Element selection strategies</h3>
 
 <p>There are eight different built-in element location strategies in WebDriver:
 
@@ -222,7 +222,7 @@ empty list will be returned.
 </table>
 
 
-<h3>Tips On Using Selectors</h3>
+<h3>Tips on using selectors</h3>
 
 <p>In general, if HTML ID's are available, unique, and consistently
 predictable, they are the preferred method for locating an element on
@@ -250,7 +250,7 @@ is an expensive operation, and the more you can narrow the scope of
 your search, the better.
 
 
-<h2>Performing Actions on the AUT</h2>
+<h2>Performing actions on the AUT</h2>
 
 <p>You can set an element's text using the sendKeys method as follows:
 
