--- a/wd.html
+++ b/wd.html
@@ -43,7 +43,7 @@
 </ul>
 
 
-<h2>Driver Requirements</h2>
+<h2>Driver requirements</h2>
 
 <p>Through WebDriver, Selenium supports all major browsers on the market
  such as Chrom(ium), Firefox, Internet Explorer, Opera, and Safari.
@@ -100,7 +100,7 @@
   <em>Ctrl + C</em>.</li>
 </ul>
 
-<h3>Quick Reference</h3>
+<h3>Quick reference</h3>
 
 <table>
  <tr>
@@ -321,16 +321,16 @@ driver = Selenium::WebDriver.for :opera</code></pre>
  a poor choice of test platform.
 
 
-<h3>Specialized Browsers</h3>
+<h3>Specialized browsers</h3>
 
 
-<h4> HtmlUnit</h4>
+<h4>HtmlUnit</h4>
 
 
 <h4>PhantomJS</h4>
 
 
-<h2>Browser Launching and Manipulation</h2>
+<h2>Browser launching and manipulation</h2>
 
 <!-- #codeExamples -->
 <!-- Remember to cover profile and extensions here -->
@@ -437,7 +437,7 @@ assert el.text == "Hello from JavaScript!"</code></pre>
  as an <em><a href=#explicit_wait>explicit wait</a></em>.
 
 
-<h3>Explicit Wait</h3>
+<h3>Explicit waiting</h3>
 
 <p><em>Explicit waits</em> are available to Selenium clients
  for imperative, procedural languages.
@@ -519,7 +519,7 @@ assert el.text == "Hello from JavaScript!"</code></pre>
 <pre class=py><code>WebDriverWait(driver, timeout=3).until(some_condition)</code></pre>
 
 
-<h4>Expected Conditions</h4>
+<h4>Expected conditions</h4>
 
 <p>Because it's quite a common occurence
  to have to synchronise the DOM and your instructions,
@@ -564,7 +564,7 @@ assert el.text == "Hello from JavaScript!"</code></pre>
 </ul>
 
 
-<h3>Implicit Waiting</h3>
+<h3>Implicit waiting</h3>
 
 <p>There is a second type of wait that is distinct from
  <a href=#explicit_wait>explicit waits</a> called <em>implicit waiting</em>.
@@ -635,13 +635,13 @@ fluentWait.until(new Predicate&lt;By&gt;() {
 browser.findElement(By.tagName("TEXTAREA")).sendKeys("text to enter");</code></pre>
 
 
-<h2 class=support_classes>Support Classes</h2>
+<h2 class=support_classes>Support classes</h2>
 
-<h2 class=http_proxies>HTTP Proxies</h2>
+<h2 class=http_proxies>HTTP proxies</h2>
 
-<h2 class="page_load_strategy">Page Load Strategy</h2>
+<h2 class="page_load_strategy">Page loading strategy</h2>
 
-<h2 class="webelement">WebElement</h2>
+<h2 class="webelement">Web elements</h2>
 
 <h2 class="keyboard">Keyboard</h2>
 
