--- a/typo.html
+++ b/typo.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>Typographical Conventions</title>
+<title>Typographical conventions</title>
 <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
 <link rel=prev href=attr.html title="Copyright and Attributions">
 <script src=docs.js></script>
 
-<h1>Typographical Conventions</h1>
+<h1>Typographical conventions</h1>
 
 <p>TODO
