typo: avoid capitalisation of titles

--- a/index.html
+++ b/index.html
@@ -170,5 +170,8 @@ search_box.submit()</code></pre>
    <li><a href=attr.html#license>License</a>
   </ul></li>
  <li><a href=typo.html#typographical_conventions>Typographical conventions</a>
+  <ul>
+   <li><a href=typo.html#capitalisation_of_titles>Capitalisation of titles</a>
+  </ul></li>
 </ul>
 </div>
