typo: add more advice

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ search_box.submit()</code></pre>
  <li><a href=typo.html#typographical_conventions>Typographical conventions</a>
   <ul>
    <li><a href=typo.html#capitalisation_of_titles>Capitalisation of titles</a>
+   <li><a href=typo.html#line_length>Line length</a>
   </ul></li>
 </ul>
 </div>
