--- a/typo.html
+++ b/typo.html
@@ -20,3 +20,27 @@
  orthographic conventions.
  We prefer what is known as <em>sentence case</em>,
  with a single initial capital to start headers.
+
+
+<h2>Line length</h2>
+
+<p>When editing the documentation’s source,
+ which is written in plain HTML,
+ limit your line lengths to around 72 characters.
+
+<p>Some of us take this one step further
+ and use what is called
+ <a href=http://rhodesmill.org/brandon/2012/one-sentence-per-line/><em>semantic linefeeds</em></a>,
+ which is a technique whereby the HTML source lines,
+ which are not read by the public,
+ are split at ‘natural breaks’ in the prose.
+ In other words, sentences are split
+ at natural breaks between clauses.
+ Instead of fussing with the lines of each paragraph
+ so that they all end near the right margin,
+ linefeeds can be added anywhere
+ that there is a break between ideas.
+
+<p>This can make diffs very easy to read
+ when collaborating through git,
+ but it is not something we enforce contributors to use.
