wd: quote url containing entity

--- a/wd.html
+++ b/wd.html
@@ -563,7 +563,7 @@ assert el.text == "Hello from JavaScript!"</code></pre>
 
 <ul>
  <li>Java's <code><a href=//seleniumhq.github.io/selenium/docs/api/java/org/openqa/selenium/support/ui/ExpectedConditions.html>org.openqa.selenium.support.ui.ExpectedConditions</a></code> class
- <li>Python's <code><a href=//seleniumhq.github.io/selenium/docs/api/py/webdriver_support/selenium.webdriver.support.expected_conditions.html?highlight=expected>selenium.webdriver.support.expected_conditions</a></code> class
+ <li>Python's <code><a href="//seleniumhq.github.io/selenium/docs/api/py/webdriver_support/selenium.webdriver.support.expected_conditions.html?highlight=expected">selenium.webdriver.support.expected_conditions</a></code> class
  <li>.NET's <code><a href=//seleniumhq.github.io/selenium/docs/api/dotnet/html/T_OpenQA_Selenium_Support_UI_ExpectedConditions.htm>OpenQA.Selenium.Support.UI.ExpectedConditions</a></code> type
 </ul>
 
