--- a/worst.html
+++ b/worst.html
@@ -4,11 +4,11 @@
 <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
-<link rel=prev href=best.html title="Best Practices">
+<link rel=prev href=best.html title="Best practices">
 <link rel=next href=grid.html title=Grid>
 <script src=docs.js></script>
 
-<h1>Worst Practices</h1>
+<h1>Worst practices</h1>
 
 
 <h2>Captchas</h2>
