worst: format and fix spelling mistakes in captcha section

--- a/worst.html
+++ b/worst.html
@@ -13,13 +13,13 @@
 
 <h2>Captchas</h2>
 
-<p>CAPTCHA, short for *Completely Automated Public Turing test to tell
-Computers and Humans Apart*, are explicitly designed to prevent
-automations, so don't try!  There are two primary strategies to get
-around CAPTCHA checks:
+<p>CAPTCHA, short for <em>Completely Automated Public Turing test
+ to tell Computers and Humans Apart</em>,
+ are explicitly designed to prevent automation, so don’t try!
+ There are two primary strategies to get around CAPTCHA checks:
 
 <ul>
- <li>Disable CAPTCHAs in your test environments
+ <li>Disable CAPTCHAs in your test environment
  <li>Add a hook to allow tests to bypass the CAPTCHA
 </ul>
 
