--- a/worst.html
+++ b/worst.html
@@ -26,13 +26,16 @@
 
 <h2>File downloads</h2>
 
-<p>Whilst it is possible to start a download by clicking a link with
- a browser under Selenium's control - the API does not currently
- expose download progress, making it less than idea for testing
- downloaded files. This is because downloading a file isn’t considered
- an important aspect of emulating user interaction with the web platform.
- Instead, find the link using Selenium (and any required cookies) and
- pass it to a HTTP request library like libcurl.
+<p>Whilst it is possible to start a download
+ by clicking a link with a browser under Selenium's control,
+ the API does not expose download progress,
+ making it less than idea for testing downloaded files.
+ This is because downloading files is not considered an important aspect
+ of emulating user interaction with the web platform.
+ Instead, find the link using Selenium
+ (and any required cookies)
+ and pass it to a HTTP request library like
+ <a href=https://curl.haxx.se/libcurl/>libcurl</a>.
 
 
 <h2>HTTP response codes</h2>
