--- a/worst.html
+++ b/worst.html
@@ -40,42 +40,54 @@
 
 <h2>HTTP response codes</h2>
 
-<p>For some browser configurations in Selenium RC, Selenium acted as a
-proxy between the browser and the site being automated.  This meant
-that all browser traffic passed through Selenium could be
-captured or manipulated.  The <code>captureNetworkTraffic()</code> method
-purported to capture all of the network traffic between the browser
-and the site being automated, including HTTP response codes.
+<p>For some browser configurations in Selenium RC,
+ Selenium acted as a proxy between the browser
+ and the site being automated.
+ This meant that all browser traffic passed through Selenium
+ could be captured or manipulated.
+ The <code>captureNetworkTraffic()</code> method
+ purported to capture all of the network traffic between the browser
+ and the site being automated,
+ including HTTP response codes.
 
-<p>Selenium WebDriver is a completely different approach to browser
-automation, preferring to act more like a user and this is represented
-in the way you write tests with WebDriver.  In automated functional
-testing, checking the status code is not a particularly important
-detail of a test's failure; the steps that preceded it are more
-important.
+<p>Selenium WebDriver is a completely different approach
+ to browser automation,
+ preferring to act more like a user
+ and this is represented in the way you write tests with WebDriver.
+ In automated functional testing,
+ checking the status code
+ is not a particularly important detail of a test's failure;
+ the steps that preceded it are more important.
 
-<p>The browser will always represent the HTTP status code, imagine for
-example a 404 or a 500 error page.  A simple way to “fail fast” when
-you encounter one of these error pages is to check the page title or
-content of a reliable point (e.g. the &lt;h1&gt; tag) after every page
-load.  If you are using the page object model you can include this
-check in your class constructor or similar point where the page load
-is expected.  Occasionally the HTTP code may even be represented in
-the browser's error page and you could use WebDriver to read this and
-improve your debugging output.
+<p>The browser will always represent the HTTP status code,
+ imagine for example a 404 or a 500 error page.
+ A simple way to “fail fast” when you encounter one of these error pages
+ is to check the page title or content of a reliable point
+ (e.g. the &lt;h1&gt; tag) after every page load.
+ If you are using the page object model
+ you can include this check in your class constructor
+ or similar point where the page load is expected.
+ Occasionally the HTTP code may even be represented
+ in the browser's error page
+ and you could use WebDriver to read this
+ and improve your debugging output.
 
-<p>Checking the webpage itself is inline with WebDriver's ideal practice
-of representing and asserting upon the user's view of the website.
+<p>Checking the webpage itself is in line
+ with WebDriver's ideal practice
+ of representing and asserting upon the user’s view of the website.
 
-<p>If you insist, an advanced solution to capturing HTTP status codes is
-to replicate the behavior of Selenium RC by using a proxy.  WebDriver
-API provides the ability to set a proxy for the browser, and there are
-a number of proxies that programmatically allow you to manipulate the
-contents of requests sent to and received from the web server.  Using
-a proxy lets you decide how you want to respond to redirection
-response codes.  Additionally, not every browser makes the response
-codes available to WebDriver, so opting to use a proxy allows you to
-have a solution that works for every browser.
+<p>If you insist, an advanced solution to capturing HTTP status codes
+ is to replicate the behaviour of Selenium RC by using a proxy.
+ WebDriver API provides the ability to set a proxy for the browser,
+ and there are a number of proxies that will
+ programmatically allow you to manipulate
+ the contents of requests sent to and received from the web server.
+ Using a proxy lets you decide how you want to respond
+ to redirection response codes.
+ Additionally, not every browser
+ makes the response codes available to WebDriver,
+ so opting to use a proxy
+ allows you to have a solution that works for every browser.
 
 
 <h2>GMail, email, and Facebook logins</h2>
