--- a/worst.html
+++ b/worst.html
@@ -92,24 +92,32 @@
 
 <h2>GMail, email, and Facebook logins</h2>
 
-<p>For multiple reasons logging into sites like Gmail and Facebook using
-WebDriver is not recommended. Aside from being against the usage terms
-for these sites (where you risk having the account shut down), it is
-slow and unreliable. Not what we want where test stability is
-important.
+<p>For multiple reasons logging into sites like Gmail and Facebook
+ using WebDriver is not recommended.
+ Aside from being against the usage terms for these sites
+ (where you risk having the account shut down),
+ it is slow and unreliable.
 
-<p>The ideal practice is to use the APIs that email providers offer, or
-in the case of Facebook the developer tools service which exposes an
-API for creating test accounts, friends and so forth. Although using
-an API might seem like a bit extra hard work you will be paid back in
-speed, reliability and stability. The API is also unlikely to change
-whereas webpages and HTML locators change often and require you to
-update your test framework.
+<p>The ideal practice is to use the APIs that email providers offer,
+ or in the case of Facebook the developer tools service
+ which exposes an API for creating test accounts, friends and so forth.
+ Although using an API might seem like a bit extra hard work
+ you will be paid back in speed, reliability and stability.
+ The API is also unlikely to change
+ whereas webpages and HTML locators change often
+ and require you to update your test framework.
 
-<p>Logging in to 3rd-party sites using WebDriver at any point of your
-test increases the risk of your test failing because it makes your
-test longer. A general rule of thumb is that longer tests are more
-fragile and unreliable.
+<p>Logging in to third party sites using WebDriver
+ at any point of your test increases the risk
+ of your test failing because it makes your test longer.
+ A general rule of thumb is that longer tests
+ are more fragile and unreliable.
+
+<p>WebDriver implementations that are
+ <a href=http://w3c.github.io/webdriver/webdriver-spec.html>W3C conformant</a>
+ also annotate the <code>navigator</code> object
+ with a <code>webdriver</code> property
+ so that Denial of Service attacks can be mitigated.
 
 
 <h2>Test dependency</h2>
